Created class TimeLine, which acts as a specialised map from Fraction to type parameter T. Creator class TimeLineRudimentCreator is used to create TimeLine<List<Integer>> and TimeLine<Map<Limb,Note>> just as IndexedStaffRudimentCreator is used to create IndexedStaff.